Fix: Created a div to be around the buggy h3 to try to fix the bug with decentralized the text

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/marlonseben1/matchpet.git"
   },
-  "author": "",
+  "author": "marlonseben",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/marlonseben1/matchpet/issues"
