--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/marlonseben1/matchpet#readme",
   "devDependencies": {
     "sass": "^1.90.0"
+  },
+  "dependencies": {
+    "live-server": "^1.2.2"
   }
 }
